--- a/frontend/admin/anggotaorganisasi.html
+++ b/frontend/admin/anggotaorganisasi.html
@@ -15,6 +15,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
@@ -400,6 +405,21 @@
 
     <!-- ================= SCRIPT ================= -->
     <script>
+      async function logoutAdmin() {
+        if (!confirm("Apakah Anda yakin ingin logout?")) return;
+
+        try {
+          await fetch("http://localhost:5000/api/admin/logout", {
+            method: "POST",
+            credentials: "include",
+          });
+        } catch (err) {
+          console.error("Gagal logout:", err);
+        } finally {
+          window.location.href = "loginadmin.html";
+        }
+      }
+
       const API = "http://localhost:5000/api/anggota-organisasi";
 
       let filteredData = [];
@@ -503,8 +523,18 @@
               <td><span class="badge bg-${item.status == 1 ? "success" : "secondary"}">
                 ${item.status == 1 ? "Aktif" : "Nonaktif"}
               </span></td>
-              <td>
-                <button class="btn btn-warning btn-sm" onclick="edit(${item.id_anggota})">Edit</button>
+              <td class="text-center">
+                <div class="d-flex justify-content-center align-items-center gap-2">
+
+                  <button class="btn btn-sm text-warning p-0"
+                          onclick="edit(${item.id_anggota})"
+                          data-bs-toggle="tooltip"
+                          data-bs-placement="top"
+                          title="Edit">
+                    <i class="bi bi-pencil-square fs-5"></i>
+                  </button>
+
+                </div>
               </td>
             </tr>
           `;
@@ -518,6 +548,14 @@
         prevBtn.disabled = currentPage === 1;
         nextBtn.disabled = end >= filteredData.length;
       }
+
+      // Init tooltip ulang setelah render
+      const tooltipTriggerList = document.querySelectorAll(
+        '[data-bs-toggle="tooltip"]',
+      );
+      tooltipTriggerList.forEach((el) => {
+        new bootstrap.Tooltip(el);
+      });
 
       // =========================
       // PAGINATION
