--- a/frontend/admin/fasilitator.html
+++ b/frontend/admin/fasilitator.html
@@ -17,6 +17,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
@@ -603,14 +607,26 @@
                     ${item.status == 1 ? "Aktif" : "Nonaktif"}
                   </span>
                 </td>
-                <td>
-                  <button class="btn btn-warning btn-sm" onclick="openEditFasilitator(${
-                    item.id_fasilitator
-                  })"
-                    >Edit</button>
-                  <button class="btn btn-danger btn-sm" onclick="hapusFasilitator(${
-                    item.id_fasilitator
-                  })">Hapus</button>
+
+                <td class="text-center">
+                  <div class="d-flex justify-content-center align-items-center gap-2">
+                    <button class="btn btn-sm text-warning p-0"
+                            onclick="openEditFasilitator(${item.id_fasilitator})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Edit">
+                      <i class="bi bi-pencil-square fs-5"></i>
+                    </button>
+
+                    <button class="btn btn-sm text-danger p-0"
+                            onclick="hapusFasilitator(${item.id_fasilitator})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Delete">
+                      <i class="bi bi-trash fs-5"></i>
+                    </button>
+
+                  </div>
                 </td>
               </tr>
             `;
@@ -624,6 +640,14 @@
           prevBtn.disabled = currentPage === 1;
           nextBtn.disabled = end >= filteredData.length;
         }
+
+        // INIT TOOLTIP ULANG
+        const tooltipTriggerList = document.querySelectorAll(
+          '[data-bs-toggle="tooltip"]',
+        );
+        tooltipTriggerList.forEach((el) => {
+          new bootstrap.Tooltip(el);
+        });
 
         // =========================
         // PAGINATION
