--- a/frontend/admin/gallery.html
+++ b/frontend/admin/gallery.html
@@ -17,6 +17,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
@@ -449,8 +454,7 @@
                 <img
                   id="edit_previewFoto"
                   class="border rounded"
-                  style="max-width: 180px; cursor: zoom-in"
-                  onclick="zoomEditFoto()"
+                  style="max-width: 180px"
                 />
               </div>
             </form>
@@ -473,15 +477,6 @@
               Simpan Perubahan
             </button>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal Zoom Foto -->
-    <div class="modal fade" id="modalZoomFoto" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered modal-lg">
-        <div class="modal-content bg-transparent border-0">
-          <img id="zoomFotoImg" class="img-fluid rounded shadow" />
         </div>
       </div>
     </div>
@@ -657,13 +652,24 @@
                   </span>
                 </td>
 
-                <td>
-                  <button class="btn btn-warning btn-sm" onclick="openEditGallery(${
-                    item.id
-                  })">Edit</button>
-                  <button class="btn btn-danger btn-sm" onclick="hapusGallery(${
-                    item.id
-                  })">Hapus</button>
+                <td class="text-center">
+                  <div class="d-flex justify-content-center align-items-center gap-2">
+                    <button class="btn btn-sm text-warning p-0"
+                            onclick="openEditGallery(${item.id})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Edit">
+                      <i class="bi bi-pencil-square fs-5"></i>
+                    </button>
+
+                    <button class="btn btn-sm text-danger p-0"
+                            onclick="hapusGallery(${item.id})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Delete">
+                      <i class="bi bi-trash fs-5"></i>
+                    </button>
+                  </div>
                 </td>
               </tr>
             `;
@@ -677,6 +683,14 @@
           prevBtn.disabled = currentPage === 1;
           nextBtn.disabled = end >= filteredData.length;
         }
+
+        // INIT TOOLTIP ULANG
+        const tooltipTriggerList = document.querySelectorAll(
+          '[data-bs-toggle="tooltip"]',
+        );
+        tooltipTriggerList.forEach((el) => {
+          new bootstrap.Tooltip(el);
+        });
 
         // =========================
         // PAGINATION
@@ -749,16 +763,6 @@
               loadGallery();
             }
           });
-
-        // =========================
-        // ZOOM FOTO EDIT
-        // =========================
-        window.zoomEditFoto = () => {
-          const src = document.getElementById("edit_previewFoto").src;
-          document.getElementById("zoomFotoImg").src = src;
-
-          new bootstrap.Modal(document.getElementById("modalZoomFoto")).show();
-        };
 
         // DELETE
         window.hapusGallery = async (id) => {
