--- a/frontend/admin/institusi.html
+++ b/frontend/admin/institusi.html
@@ -17,6 +17,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
@@ -333,7 +337,7 @@
                   <img
                     id="previewFoto"
                     class="mt-2 border rounded"
-                    style="max-width: 150px; display: none; cursor: zoom-in"
+                    style="max-width: 150px; display: none"
                   />
                 </div>
               </div>
@@ -427,8 +431,7 @@
                   <img
                     id="edit_previewFoto"
                     class="mt-2 border rounded"
-                    style="max-width: 150px; cursor: zoom-in"
-                    onclick="zoomEditInstitusiFoto()"
+                    style="max-width: 150px"
                   />
                 </div>
               </div>
@@ -587,17 +590,28 @@
                         ${item.status == 1 ? "Aktif" : "Nonaktif"}
                       </span>
                     </td>
-                  <td>
-                    <button class="btn btn-warning btn-sm" onclick="openEditInstitusi(${
-                      item.id_institusi
-                    })">
-                      Edit</button>
-                    <button class="btn btn-danger btn-sm" onclick="hapusInstitusi(${
-                      item.id_institusi
-                    })">Hapus</button>
-                  </td>
-                </tr>
-              `;
+
+                    <td class="text-center">
+                  <div class="d-flex justify-content-center align-items-center gap-2">
+                    <button class="btn btn-sm text-warning p-0"
+                            onclick="openEditInstitusi(${item.id_institusi})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Edit">
+                      <i class="bi bi-pencil-square fs-5"></i>
+                    </button>
+
+                    <button class="btn btn-sm text-danger p-0"
+                            onclick="hapusInstitusi(${item.id_institusi})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Delete">
+                      <i class="bi bi-trash fs-5"></i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+            `;
           });
           infoData.innerText = `Showing ${start + 1} to ${Math.min(
             end,
@@ -607,6 +621,14 @@
           prevBtn.disabled = currentPage === 1;
           nextBtn.disabled = end >= filteredData.length;
         }
+
+        // INIT TOOLTIP ULANG
+        const tooltipTriggerList = document.querySelectorAll(
+          '[data-bs-toggle="tooltip"]',
+        );
+        tooltipTriggerList.forEach((el) => {
+          new bootstrap.Tooltip(el);
+        });
 
         // =========================
         // PAGINATION
