--- a/frontend/admin/institusipelatihan.html
+++ b/frontend/admin/institusipelatihan.html
@@ -16,6 +16,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
@@ -387,19 +392,21 @@
             <td>${item.deskripsi}</td>
             <td>${item.kategori_rs ?? "-"}</td>
             <td>${item.tahun_berdiri ?? "-"}</td>
-            <td>
-            <button class="btn btn-warning btn-sm"
-                    onclick="openEdit(${item.id})">
-                Edit
-            </button>
-            <button class="btn btn-danger btn-sm"
-                    onclick="hapus(${item.id})">
-                Hapus
-            </button>
-            </td>
-        </tr>
-        `;
-        });
+
+            <td class="text-center">
+                  <div class="d-flex justify-content-center align-items-center gap-2">
+                    <button class="btn btn-sm text-warning p-0"
+                            onclick="openEdit(${item.id})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Edit">
+                      <i class="bi bi-pencil-square fs-5"></i>
+                    </button>
+                  </div>
+                </td>
+            </tr>
+            `;
+          });
 
         infoData.innerText = `Showing ${start + 1} to ${Math.min(
           end,
