--- a/frontend/admin/jabatan.html
+++ b/frontend/admin/jabatan.html
@@ -17,6 +17,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
@@ -466,14 +470,17 @@
           <td>${item.level_jabatan}</td>
           <td>${item.jenis_relasi}</td>
           <td>${item.urutan}</td>
-          <td>
-            <button class="btn btn-warning btn-sm"
-              onclick="editJabatan(${item.id_jabatan})">
-              Edit
-            </button>
-          </td>
-        </tr>
-      `;
+          <td class="text-center">
+                  <div class="d-flex justify-content-center align-items-center gap-2">
+                    <button class="btn btn-sm text-warning p-0"
+                            onclick="editJabatan(${item.id_jabatan})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Edit">
+                      <i class="bi bi-pencil-square fs-5"></i>
+                    </button>
+            </tr>
+          `;
         });
 
         infoData.innerText = `Showing ${start + 1} to ${Math.min(
@@ -484,6 +491,14 @@
         prevBtn.disabled = currentPage === 1;
         nextBtn.disabled = end >= filteredData.length;
       }
+
+      // INIT TOOLTIP ULANG
+      const tooltipTriggerList = document.querySelectorAll(
+        '[data-bs-toggle="tooltip"]',
+      );
+      tooltipTriggerList.forEach((el) => {
+        new bootstrap.Tooltip(el);
+      });
 
       /* ================= PAGINATION ================= */
       prevBtn.onclick = () => {
