--- a/frontend/admin/kalender.html
+++ b/frontend/admin/kalender.html
@@ -17,6 +17,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
@@ -354,11 +358,11 @@
 
         let previewFileUrl = "";
 
-        const ADMIN_HEADERS = {
-          "x-admin-id": localStorage.getItem("admin_id"),
-          "x-admin-email": localStorage.getItem("admin_email"),
-          "x-admin-nama": localStorage.getItem("admin_nama"),
-        };
+        // const ADMIN_HEADERS = {
+        //   "x-admin-id": localStorage.getItem("admin_id"),
+        //   "x-admin-email": localStorage.getItem("admin_email"),
+        //   "x-admin-nama": localStorage.getItem("admin_nama"),
+        // };
 
         const tableBody = document.getElementById("tableKalender");
         const formEdit = document.getElementById("formEditKalender");
@@ -388,18 +392,18 @@
               Lihat File
             </button>
           </td>
-          <td>
-            <button class="btn btn-warning btn-sm"
-              onclick="openEditKalender(${d.id_kalender})">
-              Edit
-            </button>
-            <button class="btn btn-danger btn-sm"
-              onclick="hapusKalender(${d.id_kalender})">
-              Hapus
-            </button>
-          </td>
-        </tr>
-      `;
+          <td class="text-center">
+                  <div class="d-flex justify-content-center align-items-center gap-2">
+                    <button class="btn btn-sm text-warning p-0"
+                            onclick="openEditKalender(${d.id_kalender})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Edit">
+                      <i class="bi bi-pencil-square fs-5"></i>
+                    </button>
+                </td>
+              </tr>
+            `;
           });
         }
 
@@ -535,21 +539,6 @@
           new bootstrap.Modal(
             document.getElementById("modalPreviewKalender"),
           ).show();
-        };
-
-        // =====================
-        // DELETE
-        // =====================
-        window.hapusKalender = async (id) => {
-          if (!confirm("Yakin ingin menghapus kalender ini?")) return;
-
-          await fetch(`${API}/${id}`, {
-            method: "DELETE",
-            headers: ADMIN_HEADERS,
-          });
-
-          alert("Kalender berhasil dihapus");
-          loadKalender();
         };
 
         loadKalender();
