--- a/frontend/admin/kritiksaran.html
+++ b/frontend/admin/kritiksaran.html
@@ -16,6 +16,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
@@ -359,12 +363,13 @@
                         Aktifkan
                         </button>`
                 }
-                <button
-                    class="btn btn-sm btn-danger"
-                    onclick="hapus(${item.id_kritik})"
-                >
-                    Hapus
-                </button>
+                        <button class="btn btn-sm text-danger p-0"
+                            onclick="hapus(${item.id_kritik})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Delete">
+                      <i class="bi bi-trash fs-5"></i>
+                    </button>
                 </td>
               </tr>
             `;
@@ -378,6 +383,14 @@
           prevBtn.disabled = currentPage === 1;
           nextBtn.disabled = end >= filteredData.length;
         }
+
+        // INIT TOOLTIP ULANG
+        const tooltipTriggerList = document.querySelectorAll(
+          '[data-bs-toggle="tooltip"]',
+        );
+        tooltipTriggerList.forEach((el) => {
+          new bootstrap.Tooltip(el);
+        });
 
         prevBtn.onclick = () => {
           if (currentPage > 1) {
