--- a/frontend/admin/pelatihan.html
+++ b/frontend/admin/pelatihan.html
@@ -17,6 +17,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
   <body>
@@ -679,8 +683,7 @@
                     id="previewFlyer"
                     class="mt-2 border rounded"
                     width="150"
-                    style="max-width: 180px; cursor: zoom-in"
-                    onclick="zoomEditFoto()"
+                    style="max-width: 180px"
                   />
                 </div>
               </div>
@@ -700,15 +703,6 @@
       </div>
     </div>
     <!-- Modal End -->
-
-    <!-- Modal Zoom Foto -->
-    <div class="modal fade" id="modalZoomFoto" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered modal-lg">
-        <div class="modal-content bg-transparent border-0">
-          <img id="zoomFotoImg" class="img-fluid rounded shadow" />
-        </div>
-      </div>
-    </div>
 
     <!-- ========================== SCRIPT ========================== -->
     <script>
@@ -864,13 +858,24 @@
                   }">${item.status}</span>
                 </td>
 
-                <td>
-                  <button class="btn btn-warning btn-sm" onclick="openEditPelatihan(${
-                    item.id_pelatihan
-                  })">Edit</button>
-                  <button class="btn btn-danger btn-sm" onclick="hapusPelatihan(${
-                    item.id_pelatihan
-                  })">Hapus</button>
+                <td class="text-center">
+                  <div class="d-flex justify-content-center align-items-center gap-2">
+                    <button class="btn btn-sm text-warning p-0"
+                            onclick="openEditPelatihan(${item.id_pelatihan})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Edit">
+                      <i class="bi bi-pencil-square fs-5"></i>
+                    </button>
+
+                    <button class="btn btn-sm text-danger p-0"
+                            onclick="hapusPelatihan(${item.id_pelatihan})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Delete">
+                      <i class="bi bi-trash fs-5"></i>
+                    </button>
+                  </div>
                 </td>
               </tr>
             `;
@@ -884,6 +889,14 @@
           prevBtn.disabled = currentPage === 1;
           nextBtn.disabled = end >= filteredData.length;
         }
+
+        // INIT TOOLTIP ULANG
+        const tooltipTriggerList = document.querySelectorAll(
+          '[data-bs-toggle="tooltip"]',
+        );
+        tooltipTriggerList.forEach((el) => {
+          new bootstrap.Tooltip(el);
+        });
 
         // ======================
         // PAGINATION BUTTON
@@ -1081,16 +1094,6 @@
             loadPelatihan();
           });
         }
-
-        // =========================
-        // ZOOM FOTO EDIT
-        // =========================
-        window.zoomEditFoto = () => {
-          const src = document.getElementById("previewFlyer").src;
-          document.getElementById("zoomFotoImg").src = src;
-
-          new bootstrap.Modal(document.getElementById("modalZoomFoto")).show();
-        };
 
         // =========================
         // DELETE DATA
