--- a/frontend/admin/pembayaran.html
+++ b/frontend/admin/pembayaran.html
@@ -17,6 +17,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
@@ -558,11 +562,13 @@
                     Invalid
                   </button>
 
-                 <button
-                    class="btn btn-danger btn-sm"
-                    onclick="hapus(${item.id_pembayaran})">
-                    Hapus
-                  </button>
+                 <button class="btn btn-sm text-danger p-0"
+                            onclick="hapus(${item.id_pembayaran})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Delete">
+                      <i class="bi bi-trash fs-5"></i>
+                    </button>
 
                 </td>
               </tr>
@@ -577,6 +583,14 @@
           prevBtn.disabled = currentPage === 1;
           nextBtn.disabled = end >= filteredData.length;
         }
+
+         // INIT TOOLTIP ULANG
+        const tooltipTriggerList = document.querySelectorAll(
+          '[data-bs-toggle="tooltip"]',
+        );
+        tooltipTriggerList.forEach((el) => {
+          new bootstrap.Tooltip(el);
+        });
 
         /* ================= PAGINATION ================= */
         prevBtn.onclick = () => {
