--- a/frontend/admin/pendaftaran.html
+++ b/frontend/admin/pendaftaran.html
@@ -17,6 +17,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
@@ -614,10 +618,12 @@
                         `
                     }
 
-                    <button class="btn btn-danger btn-sm" onclick="hapusPendaftaran(${
-                      item.id_pendaftaran
-                    })">
-                      Hapus
+                    <button class="btn btn-sm text-danger p-0"
+                            onclick="hapusPendaftaran(${item.id_pendaftaran})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Delete">
+                      <i class="bi bi-trash fs-5"></i>
                     </button>
                   </td>
 
@@ -632,6 +638,14 @@
           prevBtn.disabled = currentPage === 1;
           nextBtn.disabled = end >= filteredData.length;
         }
+
+        // INIT TOOLTIP ULANG
+        const tooltipTriggerList = document.querySelectorAll(
+          '[data-bs-toggle="tooltip"]',
+        );
+        tooltipTriggerList.forEach((el) => {
+          new bootstrap.Tooltip(el);
+        });
 
         // ======================
         // PAGINATION BUTTON
