--- a/frontend/admin/penyelenggara.html
+++ b/frontend/admin/penyelenggara.html
@@ -16,6 +16,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
@@ -437,8 +441,7 @@
                   <img
                     id="edit_previewFoto"
                     class="mt-2 border rounded"
-                    style="max-width: 180px; cursor: zoom-in"
-                    onclick="zoomEditFoto()"
+                    style="max-width: 180px"
                   />
                 </div>
               </div>
@@ -597,16 +600,24 @@
                   </span>
                 </td>
 
-                <td>
-                  <button class="btn btn-warning btn-sm"
-                    onclick="openEditPenyelenggara(${item.id_penyelenggara})">
-                    Edit
-                  </button>
+                <td class="text-center">
+                  <div class="d-flex justify-content-center align-items-center gap-2">
+                    <button class="btn btn-sm text-warning p-0"
+                            onclick="openEditPenyelenggara(${item.id_penyelenggara})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Edit">
+                      <i class="bi bi-pencil-square fs-5"></i>
+                    </button>
 
-                  <button class="btn btn-danger btn-sm"
-                    onclick="hapusPenyelenggara(${item.id_penyelenggara})">
-                    Hapus
-                  </button>
+                    <button class="btn btn-sm text-danger p-0"
+                            onclick="hapusPenyelenggara(${item.id_penyelenggara})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Delete">
+                      <i class="bi bi-trash fs-5"></i>
+                    </button>
+                  </div>
                 </td>
               </tr>
             `;
@@ -619,6 +630,14 @@
           prevBtn.disabled = currentPage === 1;
           nextBtn.disabled = end >= filteredData.length;
         }
+
+        // INIT TOOLTIP ULANG
+        const tooltipTriggerList = document.querySelectorAll(
+          '[data-bs-toggle="tooltip"]',
+        );
+        tooltipTriggerList.forEach((el) => {
+          new bootstrap.Tooltip(el);
+        });
 
         /* =========================
             PAGINATION
