--- a/frontend/admin/timkerja.html
+++ b/frontend/admin/timkerja.html
@@ -14,6 +14,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
@@ -381,18 +385,42 @@
       <tr>
         <td>${start + index + 1}</td>
         <td>${item.jabatan}</td>
-        <td>
-          <button class="btn btn-warning btn-sm" onclick="openEdit(${item.id})">Edit</button>
-          <button class="btn btn-danger btn-sm" onclick="hapus(${item.id})">Hapus</button>
-        </td>
-      </tr>
-    `;
+
+        <td class="text-center">
+                  <div class="d-flex justify-content-center align-items-center gap-2">
+                    <button class="btn btn-sm text-warning p-0"
+                            onclick="openEdit(${item.id})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Edit">
+                      <i class="bi bi-pencil-square fs-5"></i>
+                    </button>
+
+                    <button class="btn btn-sm text-danger p-0"
+                            onclick="hapus(${item.id})"
+                            data-bs-toggle="tooltip"
+                            data-bs-placement="top"
+                            title="Delete">
+                      <i class="bi bi-trash fs-5"></i>
+                    </button>
+                  </div>
+                </td>
+            </tr>
+          `;
         });
 
         infoData.innerText = `Showing ${start + 1} to ${Math.min(end, filteredData.length)} of ${filteredData.length} entries`;
         prevBtn.disabled = currentPage === 1;
         nextBtn.disabled = end >= filteredData.length;
       }
+
+      // INIT TOOLTIP ULANG
+      const tooltipTriggerList = document.querySelectorAll(
+        '[data-bs-toggle="tooltip"]',
+      );
+      tooltipTriggerList.forEach((el) => {
+        new bootstrap.Tooltip(el);
+      });
 
       prevBtn.onclick = () => {
         if (currentPage > 1) {
