--- a/frontend/index.html
+++ b/frontend/index.html
@@ -495,7 +495,7 @@
 
                   events: async function (fetchInfo, successCallback, failureCallback) {
                     try {
-                      const response = await fetch("http://localhost:5000/api/pelatihan");
+                      const response = await fetch("http://localhost:5000/api/pelatihan/public");
                       const data = await response.json();
 
                       // ===============================
@@ -926,7 +926,7 @@
                   <!-- ================= END MODAL ================= -->
 
                   <script>
-                      const API = "http://localhost:5000/api/pelatihan";
+                      const API = "http://localhost:5000/api/pelatihan/public";
 
                       // Menyimpan semua pelatihan publish
                       let allPelatihan = [];
