--- a/frontend/menupelatihan.html
+++ b/frontend/menupelatihan.html
@@ -447,7 +447,7 @@
                   <!-- ================= END MODAL ================= -->
 
               <script>
-                      const API = "http://localhost:5000/api/pelatihan";
+                      const API = "http://localhost:5000/api/pelatihan/public";
 
                       // Menyimpan semua pelatihan publish
                       let allPelatihan = [];
