--- a/frontend/admin/pendaftaran.html
+++ b/frontend/admin/pendaftaran.html
@@ -399,15 +399,6 @@
         const filterStatus = document.getElementById("filterStatus");
         const tanggalMulai = document.getElementById("tanggalMulai");
 
-        // ================================
-        // HEADER IDENTITAS ADMIN
-        // ================================
-        const ADMIN_HEADERS = {
-          "x-admin-id": localStorage.getItem("admin_id"),
-          "x-admin-email": localStorage.getItem("admin_email"),
-          "x-admin-nama": localStorage.getItem("admin_nama"),
-        };
-
         // PRIORITAS STATUS UNTUK SORTING TABEL
         const statusPriority = {
           "Menunggu Verifikasi Berkas": 1,
@@ -486,9 +477,12 @@
         // =====================================================
         async function loadFilterPelatihan() {
           try {
-            const res = await fetch("http://localhost:5000/api/pelatihan", {
-              credentials: "include",
-            });
+            const res = await fetch(
+              "http://localhost:5000/api/pelatihan",
+              {
+                credentials: "include",
+              },
+            );
             if (!res.ok) throw new Error("Gagal mengambil data pelatihan");
 
             const data = await res.json();
@@ -741,7 +735,10 @@
         window.hapusPendaftaran = async (id) => {
           if (!confirm("Hapus data pendaftaran ini?")) return;
 
-          const res = await fetch(`${API}/${id}`, { method: "DELETE" });
+          const res = await fetch(`${API}/${id}`, {
+            method: "DELETE",
+            credentials: "include",
+          });
           const data = await res.json();
           alert(data.message);
           loadPendaftaran();
@@ -755,7 +752,7 @@
 
           const res = await fetch(`${API}/${id}/accept`, {
             method: "PUT",
-            headers: ADMIN_HEADERS,
+            credentials: "include",
           });
           const data = await res.json();
           alert(data.message);
@@ -766,7 +763,7 @@
           if (!confirm("Tandai berkas TIDAK VALID?")) return;
           const res = await fetch(`${API}/${id}/reject`, {
             method: "PUT",
-            headers: ADMIN_HEADERS,
+            credentials: "include",
           });
           const data = await res.json();
           alert(data.message);
